gen/ClassDiagramParser.js
// Generated from ClassDiagram.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import ClassDiagramListener from './ClassDiagramListener.js';
import ClassDiagramVisitor from './ClassDiagramVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ClassDiagramParser extends antlr4.Parser {

    static grammarFileName = "ClassDiagram.g4";
    static literalNames = [ null, "'abstract'", "'static'", "'class'", "'interface'", 
                            "'relationship'", "'extends'", "'implements'", 
                            null, null, null, null, null, null, null, null, 
                            "':'", "';'", "','", "'_'", "'!'", "'..'" ];
    static symbolicNames = [ null, "ABSTRACT", "STATIC", "CLASS", "INTERFACE", 
                             "RELATIONSHIP", "EXTENDS", "IMPLEMENTS", "RELATIONSHIP_TYPE", 
                             "COUNT", "NAME", "VISIBILITY", "NEWLINE", "WHITESPACE", 
                             "BRACKET_START", "BRACKET_END", "COLON", "SEMI_COLON", 
                             "COMMA", "DASH", "END", "DOUBLE_POINT" ];
    static ruleNames = [ "diagram", "class", "interface", "atrribute", "methode", 
                         "parameter", "finalParameter", "extends", "implements", 
                         "relationship", "side", "multiplicity", "end" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ClassDiagramParser.ruleNames;
        this.literalNames = ClassDiagramParser.literalNames;
        this.symbolicNames = ClassDiagramParser.symbolicNames;
    }



	diagram() {
	    let localctx = new DiagramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ClassDiagramParser.RULE_diagram);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 26;
	            this.interface_();
	            this.state = 31;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 35;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===11) {
	            this.state = 32;
	            this.class_();
	            this.state = 37;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 41;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===7) {
	            this.state = 38;
	            this.implements_();
	            this.state = 43;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 44;
	            this.extends_();
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 53;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===5) {
	            this.state = 50;
	            this.relationship();
	            this.state = 55;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	class_() {
	    let localctx = new ClassContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ClassDiagramParser.RULE_class);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 56;
	            this.match(ClassDiagramParser.ABSTRACT);
	        }

	        this.state = 59;
	        this.match(ClassDiagramParser.VISIBILITY);
	        this.state = 60;
	        this.match(ClassDiagramParser.CLASS);
	        this.state = 61;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 63;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12) {
	            this.state = 62;
	            this.match(ClassDiagramParser.NEWLINE);
	        }

	        this.state = 68;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 65;
	                this.atrribute(); 
	            }
	            this.state = 70;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	        this.state = 74;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2054) !== 0)) {
	            this.state = 71;
	            this.methode();
	            this.state = 76;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 77;
	        this.end();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_() {
	    let localctx = new InterfaceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ClassDiagramParser.RULE_interface);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.match(ClassDiagramParser.INTERFACE);
	        this.state = 80;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 81;
	        this.match(ClassDiagramParser.NEWLINE);
	        this.state = 85;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2054) !== 0)) {
	            this.state = 82;
	            this.methode();
	            this.state = 87;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 88;
	        this.end();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atrribute() {
	    let localctx = new AtrributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ClassDiagramParser.RULE_atrribute);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 90;
	            this.match(ClassDiagramParser.STATIC);
	        }

	        this.state = 93;
	        this.match(ClassDiagramParser.VISIBILITY);
	        this.state = 94;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 95;
	        this.match(ClassDiagramParser.COLON);
	        this.state = 96;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 97;
	        this.match(ClassDiagramParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	methode() {
	    let localctx = new MethodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ClassDiagramParser.RULE_methode);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 99;
	            this.match(ClassDiagramParser.ABSTRACT);
	        }

	        this.state = 103;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 102;
	            this.match(ClassDiagramParser.STATIC);
	        }

	        this.state = 105;
	        this.match(ClassDiagramParser.VISIBILITY);
	        this.state = 106;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 107;
	        this.match(ClassDiagramParser.BRACKET_START);
	        this.state = 111;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 108;
	                this.parameter(); 
	            }
	            this.state = 113;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	        this.state = 114;
	        this.finalParameter();
	        this.state = 115;
	        this.match(ClassDiagramParser.BRACKET_END);
	        this.state = 116;
	        this.match(ClassDiagramParser.COLON);
	        this.state = 117;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 118;
	        this.match(ClassDiagramParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameter() {
	    let localctx = new ParameterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ClassDiagramParser.RULE_parameter);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 121;
	        this.match(ClassDiagramParser.COLON);
	        this.state = 122;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 123;
	        this.match(ClassDiagramParser.COMMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	finalParameter() {
	    let localctx = new FinalParameterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ClassDiagramParser.RULE_finalParameter);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 126;
	        this.match(ClassDiagramParser.COLON);
	        this.state = 127;
	        this.match(ClassDiagramParser.NAME);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	extends_() {
	    let localctx = new ExtendsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ClassDiagramParser.RULE_extends);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.match(ClassDiagramParser.EXTENDS);
	        this.state = 130;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 131;
	        this.match(ClassDiagramParser.COLON);
	        this.state = 132;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 133;
	        this.match(ClassDiagramParser.NEWLINE);
	        this.state = 134;
	        this.end();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	implements_() {
	    let localctx = new ImplementsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ClassDiagramParser.RULE_implements);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(ClassDiagramParser.IMPLEMENTS);
	        this.state = 137;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 138;
	        this.match(ClassDiagramParser.COLON);
	        this.state = 139;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 140;
	        this.match(ClassDiagramParser.NEWLINE);
	        this.state = 141;
	        this.end();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationship() {
	    let localctx = new RelationshipContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ClassDiagramParser.RULE_relationship);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 143;
	        this.match(ClassDiagramParser.RELATIONSHIP);
	        this.state = 144;
	        this.match(ClassDiagramParser.NEWLINE);
	        this.state = 145;
	        this.side();
	        this.state = 146;
	        this.side();
	        this.state = 147;
	        this.end();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	side() {
	    let localctx = new SideContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ClassDiagramParser.RULE_side);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(ClassDiagramParser.VISIBILITY);
	        this.state = 150;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 151;
	        this.match(ClassDiagramParser.RELATIONSHIP_TYPE);
	        this.state = 152;
	        this.match(ClassDiagramParser.NAME);
	        this.state = 153;
	        this.match(ClassDiagramParser.COLON);
	        this.state = 154;
	        this.multiplicity();
	        this.state = 155;
	        this.match(ClassDiagramParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiplicity() {
	    let localctx = new MultiplicityContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ClassDiagramParser.RULE_multiplicity);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.match(ClassDiagramParser.COUNT);
	        this.state = 159;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21) {
	            this.state = 158;
	            this.match(ClassDiagramParser.DOUBLE_POINT);
	        }

	        this.state = 162;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9) {
	            this.state = 161;
	            this.match(ClassDiagramParser.COUNT);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	end() {
	    let localctx = new EndContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ClassDiagramParser.RULE_end);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        this.match(ClassDiagramParser.END);
	        this.state = 168;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 165;
	            this.match(ClassDiagramParser.NEWLINE);
	            this.state = 170;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

ClassDiagramParser.EOF = antlr4.Token.EOF;
ClassDiagramParser.ABSTRACT = 1;
ClassDiagramParser.STATIC = 2;
ClassDiagramParser.CLASS = 3;
ClassDiagramParser.INTERFACE = 4;
ClassDiagramParser.RELATIONSHIP = 5;
ClassDiagramParser.EXTENDS = 6;
ClassDiagramParser.IMPLEMENTS = 7;
ClassDiagramParser.RELATIONSHIP_TYPE = 8;
ClassDiagramParser.COUNT = 9;
ClassDiagramParser.NAME = 10;
ClassDiagramParser.VISIBILITY = 11;
ClassDiagramParser.NEWLINE = 12;
ClassDiagramParser.WHITESPACE = 13;
ClassDiagramParser.BRACKET_START = 14;
ClassDiagramParser.BRACKET_END = 15;
ClassDiagramParser.COLON = 16;
ClassDiagramParser.SEMI_COLON = 17;
ClassDiagramParser.COMMA = 18;
ClassDiagramParser.DASH = 19;
ClassDiagramParser.END = 20;
ClassDiagramParser.DOUBLE_POINT = 21;

ClassDiagramParser.RULE_diagram = 0;
ClassDiagramParser.RULE_class = 1;
ClassDiagramParser.RULE_interface = 2;
ClassDiagramParser.RULE_atrribute = 3;
ClassDiagramParser.RULE_methode = 4;
ClassDiagramParser.RULE_parameter = 5;
ClassDiagramParser.RULE_finalParameter = 6;
ClassDiagramParser.RULE_extends = 7;
ClassDiagramParser.RULE_implements = 8;
ClassDiagramParser.RULE_relationship = 9;
ClassDiagramParser.RULE_side = 10;
ClassDiagramParser.RULE_multiplicity = 11;
ClassDiagramParser.RULE_end = 12;

class DiagramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_diagram;
    }

	interface_ = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InterfaceContext);
	    } else {
	        return this.getTypedRuleContext(InterfaceContext,i);
	    }
	};

	class_ = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ClassContext);
	    } else {
	        return this.getTypedRuleContext(ClassContext,i);
	    }
	};

	implements_ = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ImplementsContext);
	    } else {
	        return this.getTypedRuleContext(ImplementsContext,i);
	    }
	};

	extends_ = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExtendsContext);
	    } else {
	        return this.getTypedRuleContext(ExtendsContext,i);
	    }
	};

	relationship = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(RelationshipContext);
	    } else {
	        return this.getTypedRuleContext(RelationshipContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterDiagram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitDiagram(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitDiagram(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ClassContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_class;
    }

	VISIBILITY() {
	    return this.getToken(ClassDiagramParser.VISIBILITY, 0);
	};

	CLASS() {
	    return this.getToken(ClassDiagramParser.CLASS, 0);
	};

	NAME() {
	    return this.getToken(ClassDiagramParser.NAME, 0);
	};

	end() {
	    return this.getTypedRuleContext(EndContext,0);
	};

	ABSTRACT() {
	    return this.getToken(ClassDiagramParser.ABSTRACT, 0);
	};

	NEWLINE() {
	    return this.getToken(ClassDiagramParser.NEWLINE, 0);
	};

	atrribute = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AtrributeContext);
	    } else {
	        return this.getTypedRuleContext(AtrributeContext,i);
	    }
	};

	methode = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(MethodeContext);
	    } else {
	        return this.getTypedRuleContext(MethodeContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterClass(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitClass(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitClass(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class InterfaceContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_interface;
    }

	INTERFACE() {
	    return this.getToken(ClassDiagramParser.INTERFACE, 0);
	};

	NAME() {
	    return this.getToken(ClassDiagramParser.NAME, 0);
	};

	NEWLINE() {
	    return this.getToken(ClassDiagramParser.NEWLINE, 0);
	};

	end() {
	    return this.getTypedRuleContext(EndContext,0);
	};

	methode = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(MethodeContext);
	    } else {
	        return this.getTypedRuleContext(MethodeContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterInterface(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitInterface(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitInterface(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AtrributeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_atrribute;
    }

	VISIBILITY() {
	    return this.getToken(ClassDiagramParser.VISIBILITY, 0);
	};

	NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ClassDiagramParser.NAME);
	    } else {
	        return this.getToken(ClassDiagramParser.NAME, i);
	    }
	};


	COLON() {
	    return this.getToken(ClassDiagramParser.COLON, 0);
	};

	NEWLINE() {
	    return this.getToken(ClassDiagramParser.NEWLINE, 0);
	};

	STATIC() {
	    return this.getToken(ClassDiagramParser.STATIC, 0);
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterAtrribute(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitAtrribute(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitAtrribute(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MethodeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_methode;
    }

	VISIBILITY() {
	    return this.getToken(ClassDiagramParser.VISIBILITY, 0);
	};

	NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ClassDiagramParser.NAME);
	    } else {
	        return this.getToken(ClassDiagramParser.NAME, i);
	    }
	};


	BRACKET_START() {
	    return this.getToken(ClassDiagramParser.BRACKET_START, 0);
	};

	finalParameter() {
	    return this.getTypedRuleContext(FinalParameterContext,0);
	};

	BRACKET_END() {
	    return this.getToken(ClassDiagramParser.BRACKET_END, 0);
	};

	COLON() {
	    return this.getToken(ClassDiagramParser.COLON, 0);
	};

	NEWLINE() {
	    return this.getToken(ClassDiagramParser.NEWLINE, 0);
	};

	ABSTRACT() {
	    return this.getToken(ClassDiagramParser.ABSTRACT, 0);
	};

	STATIC() {
	    return this.getToken(ClassDiagramParser.STATIC, 0);
	};

	parameter = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ParameterContext);
	    } else {
	        return this.getTypedRuleContext(ParameterContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterMethode(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitMethode(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitMethode(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ParameterContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_parameter;
    }

	NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ClassDiagramParser.NAME);
	    } else {
	        return this.getToken(ClassDiagramParser.NAME, i);
	    }
	};


	COLON() {
	    return this.getToken(ClassDiagramParser.COLON, 0);
	};

	COMMA() {
	    return this.getToken(ClassDiagramParser.COMMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterParameter(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitParameter(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitParameter(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FinalParameterContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_finalParameter;
    }

	NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ClassDiagramParser.NAME);
	    } else {
	        return this.getToken(ClassDiagramParser.NAME, i);
	    }
	};


	COLON() {
	    return this.getToken(ClassDiagramParser.COLON, 0);
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterFinalParameter(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitFinalParameter(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitFinalParameter(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ExtendsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ClassDiagramParser.RULE_extends;
    }

	EXTENDS() {
	    return this.getToken(ClassDiagramParser.EXTENDS, 0);
	};

	NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ClassDiagramParser.NAME);
	    } else {
	        return this.getToken(ClassDiagramParser.NAME, i);
	    }
	};


	COLON() {
	    return this.getToken(ClassDiagramParser.COLON, 0);
	};

	NEWLINE() {
	    return this.getToken(ClassDiagramParser.NEWLINE, 0);
	};

	end() {
	    return this.getTypedRuleContext(EndContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.enterExtends(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ClassDiagramListener ) {
	        listener.exitExtends(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ClassDiagramVisitor ) {
	        return visitor.visitExtends(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ImplementsContext extends antlr4.ParserRuleContext {
